# dalgo

./: CMakeLists.txt  README.md
dalgo/: CMakeLists.txt
dalgo/inc/: dkmp.h
dalgo/src/: dkmp.cpp
samples/: CMakeLists.txt  main.cpp
